--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <title>Geminids</title>
   <div id = "heading">
-    <p style="font-size: 40px;color:light g">Geminids</p>
+    <p style="font-size: 40px;color:white">Geminids</p>
     <!-- <p>An interactive short story, in 3 parts.</p> -->
   </div>
 </head>
