--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <meta charset="utf-8">
   <title>Geminids</title>
   <div id = "heading">
-    <p style="font-size: 40px;color:white">Geminids</p>
+    <p><u>Geminids</u></p>
     <!-- <p>An interactive short story, in 3 parts.</p> -->
   </div>
 </head>
 
 <body>
+
   <div id="flvTextBox">
     <p id="flvtxt"></p>
   </div>
@@ -22,11 +23,18 @@
     <input type="button" name="male" value="Him" id="b_male" class= 'button'>
     <input type="button" name="female" value="Her" id="b_female" class = 'button'>
   </div>
-  <div class="choices">
+  <!-- <div class="choices">
     <div class="choice-button">
       <input type="button" name="choice1" value="Choice 1" id="c1" class = 'button'>
       <input type="button" name="choice2" value="Choice 2" id="c2" class = 'button'>
     </div>
+  </div> -->
+  <div class="Whitespace">
+    <br><br><br><br><br><br><br><br><br><br>
+  </div>
+  <div class="Footer">
+    <a href="#">About</a>
+    <a href="#">Help</a>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="script.js"></script>
